1999-12-05  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* poe-18.el (numberp): New function; alias for `integerp'.
	(abs): New function.

	* poe-18.el (byte-code-function-p): Docstring sync.
	(cyclic-function-indirection): New error symbol.
	(indirect-function): New function; use above symbol.

1999-11-30  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* poe-18.el (current-time-string): New local variable `lyear'
	for leap year; renamed from `uru' and bind locally.

	* poe.el (emacs-major-version, emacs-minor-version): Define
	at compile-time as well as at load-time in order to do compile-
	time version check.
	(tcp): Require if `open-network-stream' is not available;
	moved from "pces.el".

	* pym.el: Removed comment.

1999-11-28  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* poe.el, poe-18.el, poe-xemacs.el, pym.el: Modified comments.

1999-11-25  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* poe-18.el: Modified comments.
	(buffer-undo-list, data-directory): Use `defvar'.
	(generate-new-buffer-name): Use `defun'.

1999-11-22  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* pccl-20.el, pccl-om.el: Removed "[SOURCE INFO]" style
	comment from docstrings.

	* pccl-om.el, localhook.el, pcustom.el: Updated header.

1999-11-13  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* Removed "[SOURCE INFO]" style comment from docstrings.
	Most of them are out of sync, and now there are some other
	ways to get such information.

	* poe-18.el: Rearranged.
	(lambda): New macro.
	(get-char-property, next-single-property-change,
	 previous-property-change, previous-single-property-change,
	 text-property-any, text-property-not-all,
	 next-char-property-change, previous-char-property-change):
	Define as null function.

	* poe-xemacs.el: Rearranged.
	(eval-after-load): Moved to poe.el.

	* poe.el: Rearranged; reduce load-time check.
	Moved many macros to pym.el.
	(require): New function; emulate optional 3rd arg.
	(plist-get, plist-put): New functions.
	(string-to-number): New function.