@@ -1,3 +1,7 @@
+1999-12-06  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
+
+	* pym.el (subr-fboundp): Reverted; but considered as obsolete.
+
 1999-12-05  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
 
 	* poe-18.el (numberp): New function; alias for `integerp'.
